friday eod commit
